# sochisirius_buggy

./: .gitignore  README.md
src/ackermann_cpp_rewrite/: CMakeLists.txt  package.xml
src/ackermann_cpp_rewrite/src/: ackermann_cpp_rewrite_node.cpp
src/buggy_2dnav/: package.xml
src/buggy_2dnav/cfg/: costmap_common_params.yaml  global_costmap_params.yaml  rviz_navigation.rviz  teb_local_planner_params.yaml
src/buggy_2dnav/launch/: buggy_configuration.launch  move_base.launch  robot_ekf.launch  rtabmap_run.launch
src/joy/src/: joy_node.cpp
src/joycontrol/: CMakeLists.txt  package.xml
src/joycontrol/launch/: control.launch
src/joycontrol/src/: teleop_joy.cpp
src/line_detector/: CMakeLists.txt  package.xml
src/line_detector/include/line_detector/: line_detector.h
src/line_detector/launch/: line_detector.launch
src/line_detector/src/: line_detector_node.cpp
src/line_detector/src/line_detector/: line_detector.cpp
src/odom_broadcaster/: CMakeLists.txt  package.xml
src/odom_broadcaster/src/: odom_broadcaster.cpp
src/zed-ros-wrapper/src/: zed_wrapper_nodelet.cpp
